--- a/templates/about.html
+++ b/templates/about.html
@@ -2,10 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/app.css')}}" />
         <title>My website - About</title>
     </head>
     <body>
         <h1>keishma pitter </h1>
         <p> Keishma Pitter is a dynamic and ambitious individual with a passion for technology and innovation. Born and raised in a bustling city, Keishma developed a keen interest in computer science from a young age. After completing her education in software engineering, she embarked on a successful career in the tech industry. Keishma is known for her strong work ethic and problem-solving skills. She has a knack for finding creative solutions to complex challenges, earning her recognition as a valuable</p>
+        <img src="{{url_for('static', filename='trunks.jpg')}}" >
     </body>
 </html>    
